--- a/app/src/main/res/layout/adapter_anuncios.xml
+++ b/app/src/main/res/layout/adapter_anuncios.xml
@@ -13,8 +13,7 @@
         android:id="@+id/servico"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@id/image"
         android:layout_margin="4sp"
         android:textColor="#fff"
         android:textStyle="bold" />
@@ -23,7 +22,7 @@
         android:id="@+id/descricao"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@id/image"
         android:layout_below="@+id/servico"
         android:layout_margin="4sp"
         android:textColor="#fff"/>
@@ -32,9 +31,9 @@
         android:id="@+id/telefone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/descricao"
         android:layout_margin="4sp"
+        android:layout_toLeftOf="@id/image"
         android:textColor="#fff"
         android:textStyle="bold" />
 
@@ -42,23 +41,22 @@
         android:id="@+id/local"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/telefone"
         android:layout_margin="4sp"
+        android:layout_toLeftOf="@id/image"
         android:textColor="#fff" />
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="100sp"
         android:layout_height="100sp"
-        android:layout_alignEnd="@+id/servico"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true" />
 
     <TextView
         android:id="@+id/usuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/local"
         android:layout_margin="4sp"
         android:gravity="right"
